--- a/back/package.json
+++ b/back/package.json
@@ -1,9 +1,10 @@
 {
   "name": "proyectofinaldfs",
   "version": "1.0.0",
-  "description": "",
+  "description": "Backend para Luxe Haven Hotel",
   "main": "src/app.js",
   "scripts": {
+    "start": "node src/app.js",
     "dev": "nodemon src/app.js"
   },
   "keywords": [],
