--- a/front/package.json
+++ b/front/package.json
@@ -9,10 +9,12 @@
     "lint": "eslint .",
     "preview": "vite preview"
   },
+  "engines": {
+    "node": "20.x"
+  },
   "dependencies": {
     "@supabase/supabase-js": "^2.93.2",
     "lucide-react": "^0.563.0",
-    "node": "^25.5.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.13.0"
